--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "http://aaronosaur.us/"
 languageCode = "en-us"
-title = "Aaron's Blog"
+title = "aaronosaur.us"
 theme = "bare"
 sectionPagesMenu = "main"
